Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-85693

Fix potential access violation in User::validateRestrictions

    • Server Security
    • Fully Compatible
    • ALL
    • v7.3, v7.0, v6.0, v5.0
    • Security 2024-02-05
    • 105

      UMCTransaction::runCommand should set Client::isInDirectClient true to by pass authz since it is internal.

            Assignee:
            erwin.pe@mongodb.com Erwin Pe
            Reporter:
            mark.benvenuto@mongodb.com Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: