SERVER-85693 Fix potential access violation in User::validateRestrictions

GitOrigin-RevId: cff73e33b92545f5131677112ddb8e5349bbbbfa